# vegapy

./: .env  .gitignore  Makefile  README.md  logging.yaml  pyproject.toml  pytest.ini
examples/: README.md  balances.py  market_data.py  trades.py
scripts/: main.py  parser.py
tests/: audit.py  fixtures.py  test_get_latest_market_data.py  test_get_latest_market_depth.py  test_get_market_data_history_by_id.py  test_list_accounts.py  test_list_all_positions.py  test_list_assets.py  test_list_funding_period_data_points.py  test_list_governance_data.py  test_list_latest_market_data.py  test_list_ledger_entries.py  test_list_markets.py  test_list_orders.py  test_list_parties.py  test_list_positions.py  test_list_trades.py
tests/examples/: test_market_data.py  test_trades.py
tests/service/networks/: test_networks.py
tests/service/service_trading_data/: test_get_latest_market_data.py  test_get_latest_market_depth.py  test_get_market_data_history_by_id.py  test_get_network_parameter.py  test_get_vega_time.py  test_list_accounts.py  test_list_all_positions.py  test_list_assets.py  test_list_balance_changes.py  test_list_candle_data.py  test_list_candle_intervals.py  test_list_epoch_reward_summaries.py  test_list_funding_payments.py  test_list_funding_period_data_points.py  test_list_funding_periods.py  test_list_markets.py  (+10 more)
vegapy/: __init__.py  utils.py
vegapy/plot/: market_data.py  trades.py
vegapy/protobuf/: buf.gen.yaml  generate.py  post-generate.sh
vegapy/service/: service.py  service_trading_data.py
vegapy/visualisations/: __init__.py  overlay.py  plot.py
(+49 files in other folders)
