[tool.poetry]
name = "vegapy"
version = "0.1.0"
description = ""
authors = ["Charlie <charlie@vegaprotocol.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
grpcio = "^1.59.3"
toml = "^0.10.2"
requests = "^2.31.0"
jinja2 = "^3.1.2"
protobuf = "^4.25.1"
grpcio-tools = "^1.59.3"
protoc-gen-openapiv2 = "^0.0.1"
pytest = "^7.4.3"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
pyqt6 = "^6.6.1"
black = "^24.2.0"

[tool.poetry.group.notebooks.dependencies]
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
ipympl = "^0.9.3"


[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
